@@ -4,6 +4,7 @@ git-annex (4.20130522) UNRELEASED; urgency=low
   * XMPP: Avoid redundant and unncessary pushes. Note that this breaks
     compatibility with previous versions of git-annex, which will refuse
     to accept any XMPP pushes from this version.
+  * hook special remote: Added combined hook program support.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 May 2013 18:22:46 -0400
 
